fixed issue with hackathon button being covered by image. Changed image z-index to -1

--- a/css/hackathon.css
+++ b/css/hackathon.css
@@ -15,20 +15,10 @@ h3 {
   font-family: "Roboto";
 }
 
- p {
+p {
   font-family: "Roboto";
   font-weight: 300;
   line-height: 30px;
-}
-
-.article ul {
-  font-family: "Roboto";
-  font-weight: 300;
-  line-height: 30px;
-  background-color: #e6e6e6;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 20px;
 }
 
 .banner-text {
@@ -37,12 +27,44 @@ h3 {
 
   margin-bottom: 10px;
   padding-bottom: 0px;
+  line-height: 50px;
 }
+
 
 .sub-text {
   text-align: center;
   margin-bottom: 0px;
 }
+
+.post {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  padding-bottom: 50px;
+}
+
+.text-container {
+grid-column: 4/10;
+}
+
+.full-width-container {
+  grid-column: 3/11;
+}
+
+.max-width-container {
+  grid-column: 1/-1;
+  justify-self: center;
+}
+
+/*
+.post ul {
+  font-family: "Roboto";
+  font-weight: 300;
+  line-height: 30px;
+  background-color: #e6e6e6;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
+} */
 
 .cta {
   display: grid;
@@ -99,33 +121,12 @@ h3 {
     border: 2px solid #39BD9C;
   }
 
+/*
 .mockup-img {
   height: 500px;
   width: auto;
   text-align: center;
-}
-.banner-text {
-  line-height: 50px;
-}
-
-.post {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  padding-bottom: 50px;
-}
-
-.text-container {
-grid-column: 4/10;
-}
-
-.full-width-container {
-  grid-column: 3/11;
-}
-
-.max-width-container {
-  grid-column: 1/-1;
-  justify-self: center;
-}
+} */
 
 /*
 .post>* {
@@ -142,15 +143,19 @@ grid-column: 4/10;
   height: 100%;
 }
 
+
 figure {
+  z-index: -1;
   grid-column: 3/8;
-  margin-top: -120px;
+  margin-top: -110px;
   margin-bottom: -100px;
+  position: relative;
 }
 
 figure img {
   width: 100%;
 }
+
 
 .before-after-grid {
   display: grid;
@@ -184,10 +189,6 @@ figure img {
   justify-self: center;
 }
 
-#style-guide {
-
-}
-
 iframe {
   grid-column: 1/-1;
 
@@ -198,6 +199,7 @@ iframe, object, embed {
     max-width: 100%;
 
 }
+
 
 @media (max-width: 850px) {
 
